# cucoudle

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile.relay  LICENSE  README.md  package-lock.json  package.json  tsconfig.base.json  vitest.config.ts
.github/workflows/: relay-deploy.yml
HomebrewFormula/: cucoudle.rb
apps/desktop/: README.md  pyproject.toml
apps/desktop/cucoudle_desktop/: __init__.py  cli.py  config.py  daemon.py  installer.py  interactions.py  ipc.py  protocol.py  registry.py  relay_client.py  render.py  session.py  shim_template.py
apps/desktop/scripts/: purge.sh
apps/desktop/tests/: test_config.py  test_daemon.py  test_daemon_render.py  test_daemon_text_input.py  test_installer.py  test_interactions.py  test_ipc.py  test_protocol.py  test_registry.py  test_relay_client.py  test_render.py  test_session.py
apps/mobile/: app.json  expo-env.d.ts  jest.config.js  jest.setup.ts  metro.config.js  package.json
apps/relay/: package.json  tsconfig.json
apps/relay/scripts/: fake-desktop.ts  fake-mobile.ts
apps/relay/src/: app.test.ts  app.ts  audit.ts  capabilities.test.ts  e2e.test.ts  handlers.test.ts  handlers.ts  interactions.test.ts  pairing.test.ts  (+4 more)
deploy/homebrew/: README.md
deploy/relay/: README.md  compose.yaml  cucoudle-relay.user.service  deploy.sh  nginx.conf
docs/: FINAL_IMPLEMENTATION.md  PROGRESS.md  hackathon-implementation-plan.md  protocol-contracts.md  session-composer-mockups.html  splash-preview.html
docs/presentation/: cucoudle-pitch.html
scripts/: dev-desktop.sh
tests/integration/: desktop-relay-smoke.ts
(+96 files in other folders)
